--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build: .
     command: poetry run python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/app/
+      - app_data:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
@@ -31,3 +31,4 @@ networks:
 
 volumes:
   postgres_data:
+  app_data:
