--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,9 @@ jobs:
       run: python -m poetry install
 
     - name: Test
+      env:
+        SECRET_KEY: "fake-secret-key-for-tests"
+        DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1"
+        DEBUG: "1"
       run: |
         poetry run python manage.py test
