--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,10 @@ services:
       - POSTGRES_DB=bookstore_dev_db
   web:
     build: .
-    command: poetry run python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "
+      poetry run python manage.py migrate &&
+      poetry run python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app/
     ports:
