--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -5,6 +5,10 @@ jobs:
   qa:
     name: Quality check
     runs-on: ubuntu-latest
+    env:
+      DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1"
+      SECRET_KEY: "django-insecure-default-test-key"
+      DEBUG: "1"
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
